[package]
name = "helix-calc"
version = "1.4.3"
authors = ["Fred Gobry <fred@epthos.net>"]
edition = "2021"
description = "Reverse Polish Notation calculator in a terminal app."
repository = "https://github.com/chbug/hc"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["tui", "calculator", "rpn"]
categories = ["command-line-utilities"]

[[bin]]
name = "hc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bigdecimal = "0"
clap = { version = "4", features = [ "derive" ] }
crossterm = "0.29"
ratatui = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tui-input = "0"
